# advent_of_code

./: .flake8  .gitignore  NOTES.md  README.md  go.work  justfile  output  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
2015/01/: main.py  output
2015/02/: main.py  output
2015/03/: main.py  output
2015/04/: main.py  output
2015/05/: main.py  output
2015/06/: main.py  output  sample
2015/07/: main.py  output
2015/08/: main.py  output
2015/09/: main.py  output
2015/10/: main.py  output
2015/11/: main.py  output
2015/12/: main.py  output
2015/13/: main.py  output
2015/14/: main.py  output
2015/15/: main.py  output
2015/16/: main.py  output
2015/17/: main.py  output
2015/18/: main.py  output
2015/19/: main.py  output
2015/20/: main.py  output
2015/21/: main.py  output
2015/22/: main.py  output
2015/23/: main.py  output
2015/24/: main.py  output
2015/25/: main.py  output
2016/01/: main.py  output
2016/02/: main.py  output
2016/03/: main.py  output
2016/04/: main.py  output
2016/05/: main.py  output
2016/06/: main.py  output
2016/07/: main.py  output
2016/08/: main.py  output
2016/09/: main.py  output
2016/10/: main.py  output
2016/11/: main.py  output
2016/12/: main.py  output
2016/13/: main.py  output
2016/14/: main.py  output
2016/15/: main.py  output
2016/16/: main.py  output
2016/17/: input  main.py  output
2016/18/: main.py  output
2016/19/: main.py  output
2016/20/: main.py  output
2016/21/: input  (+2 more)
2021/: justfile
common/: template.py  template.rs
(+388 files in other folders)
