[tool.poetry]
name = "advent_of_code"
version = "0.1.0"
description = ""
authors = ["Alfred Gamulo"]

[tool.poetry.dependencies]
python = "^3.12"
rich = "^10.16.1"
click = "^8.0.3"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
