[tool.poetry]
name = "advent_of_code"
version = "0.1.0"
description = ""
authors = ["Alfred Gamulo"]

[tool.poetry.dependencies]
python = "^3.12"
rich = "^10.16.1"
click = "^8.0.3"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
sympy = "^1.12"
scipy = "^1.11.4"
z3-solver = "^4.12.4.0"
networkx = "^3.2.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^24.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
